Another clipping fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,7 @@ $global-font-family : $serif;
 
 .site-logo img {
   overflow: visible;
+  height: 100%
 }
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
